--- a/Pages/EditorView.xaml
+++ b/Pages/EditorView.xaml
@@ -18,11 +18,11 @@
                 <RowDefinition Height="1*"/>
             </Grid.RowDefinitions>
             <StackPanel Grid.Row="0" Grid.Column="0" Orientation="Horizontal">
-                <Label Content="Profile 1 enabled:"/>
+                <Label Content="XMP 1 enabled:"/>
                 <CheckBox Margin="0,5,0,0" IsChecked="{Binding SPD.XMP1Enabled}"/>
             </StackPanel>
             <StackPanel Grid.Row="0" Grid.Column="1" Orientation="Horizontal">
-                <Label Content="Profile 2 enabled:"/>
+                <Label Content="XMP 2 enabled:"/>
                 <CheckBox Margin="0,5,0,0" IsChecked="{Binding SPD.XMP2Enabled}"/>
             </StackPanel>
             <StackPanel Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2" Orientation="Horizontal">
