--- a/Pages/EditorView.xaml
+++ b/Pages/EditorView.xaml
@@ -3,9 +3,7 @@
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:local="clr-namespace:DDR4XMPEditor.Pages"
-      mc:Ignorable="d" 
-      d:DesignHeight="680" d:DesignWidth="360">
+      mc:Ignorable="d" MinWidth="360" MinHeight="700">
 
     <StackPanel IsEnabled="{Binding IsSPDValid}">
         <Grid>
