--- a/Pages/XMPEditorView.xaml
+++ b/Pages/XMPEditorView.xaml
@@ -5,8 +5,8 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:DDR4XMPEditor.Pages"
       xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
-      mc:Ignorable="d" 
-      d:DesignHeight="650" d:DesignWidth="360" IsEnabled="{Binding IsEnabled}">
+      mc:Ignorable="d"
+      IsEnabled="{Binding IsEnabled}">
 
     <UserControl.Resources>
         <local:TicksToTimeConverter x:Key="TicksToTimeConverter"/>
